--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,1 +1,114 @@
-site_name: My Docs
+site_name: M3ragon`s Küche
+site_url: https://m3ragon.github.io/Arma3SurvivalWiki/
+nav:
+    - Home: index.md
+
+theme:
+  name: material
+  features:
+    - content.code.annotate
+    - content.tabs.link
+    - navigation.tabs
+    - navigation.top
+  logo: assets/img/logo.svg
+  favicon: assets/img/logo.svg
+  icon:
+    repo: fontawesome/brands/git-alt 
+    admonition:
+      note: octicons/tag-16
+      abstract: octicons/checklist-16
+      info: octicons/info-16
+      tip: octicons/squirrel-16
+      success: octicons/check-16
+      question: octicons/question-16
+      warning: octicons/alert-16
+      failure: octicons/x-circle-16
+      danger: octicons/zap-16
+      bug: octicons/bug-16
+      example: octicons/beaker-16
+      quote: octicons/quote-16
+  palette:
+    - media: "(prefers-color-scheme: light)" 
+      scheme: default
+      toggle:
+        icon: material/toggle-switch-off-outline
+        name: Switch to dark mode
+    - media: "(prefers-color-scheme: dark)" 
+      scheme: slate
+      toggle:
+        icon: material/toggle-switch
+        name: Switch to light mode
+
+plugins:
+  - search
+  - minify:
+      minify_html: true
+      minify_js: false
+      minify_css: false
+      htmlmin_opts:
+          remove_comments: true
+
+markdown_extensions:
+  - tables
+  - meta
+  - def_list
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
+  - attr_list
+  - md_in_html
+  - abbr
+  - pymdownx.highlight:
+      anchor_linenums: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.tasklist:
+      custom_checkbox: true
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
+  - pymdownx.tabbed:
+      alternate_style: true 
+  - toc:
+      permalink: true
+  - pymdownx.critic
+  - pymdownx.caret
+  - pymdownx.keys
+  - pymdownx.mark
+  - pymdownx.tilde
+  - footnotes
+
+copyright: Copyright &copy; 2021 - 2022 M3ragon
+repo_name: M3ragon/Kitchen
+repo_url: https://github.com/M3ragon/Arma3SurvivalWiki
+
+extra_javascript:
+  - https://cdnjs.cloudflare.com/ajax/libs/tablesort/5.2.1/tablesort.min.js
+  - assets/javascripts/tablesort.js
+  - assets/javascripts/consent.js
+  - assets/javascripts/lazyload.js
+
+extra_css:
+  - assets/stylesheets/extra.css
+
+extra:
+  homepage: https://m3ragon.github.io/Arma3SurvivalWiki/
+  consent:
+    title: Cookie consent
+    description: 
+      We use cookies to recognize your repeated visits and preferences, as well
+      as to measure the effectiveness of our documentation and whether users
+      find what they're searching for. With your consent, you're helping us to
+      make our documentation better.
+    cookies:
+      analytics:
+        name: Google Analytics
+        checked: false
+      custom:
+        name: Custom
+        checked: false
+
