--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,8 +10,8 @@ theme:
     - content.tabs.link
     - navigation.tabs
     - navigation.top
-  logo: assets/img/logo.svg
-  favicon: assets/img/logo.svg
+  logo: assets/img/logo.png
+  favicon: assets/img/logo.png
   icon:
     repo: fontawesome/brands/git-alt 
     admonition:
