--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: Arma 3 Survival Wiki
 site_url: https://m3ragon.github.io/Arma3SurvivalWiki/
 nav:
-    - Home: index.md
+  - Home: index.md
   - Progress: progress.md
   - About: about.md
 
@@ -91,13 +91,15 @@ repo_name: A3S/Wiki
 repo_url: https://github.com/M3ragon/Arma3SurvivalWiki
 
 extra_javascript:
-  - https://cdnjs.cloudflare.com/ajax/libs/tablesort/5.2.1/tablesort.min.js
+  - https://unpkg.com/tablesort@5.3.0/dist/tablesort.min.js
   - assets/javascripts/tablesort.js
   - assets/javascripts/consent.js
   - assets/javascripts/lazyload.js
+#  - assets/javascripts/image-carousel.js 
 
 extra_css:
   - assets/stylesheets/extra.css
+  - assets/stylesheets/app-theme.css
 
 extra:
   homepage: https://m3ragon.github.io/Arma3SurvivalWiki/
