--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,6 +2,9 @@ site_name: Arma 3 Survival Wiki
 site_url: https://m3ragon.github.io/Arma3SurvivalWiki/
 nav:
   - Home: index.md
+  - Wiki:
+    - wiki/index.md
+    - Basebuilding and Raiding: wiki/base/BuildingAndRaiding.md
   - Progress: progress.md
   - About: about.md
 
