--- a/.github/workflows/gh-deploy.yml
+++ b/.github/workflows/gh-deploy.yml
@@ -15,4 +15,4 @@ jobs:
       - run: pip install mkdocs-material 
       - run: pip install mkdocs-minify-plugin
       - run: mkdocs gh-deploy --force
-      
+      - run: dig wiki.meragon.xyz +nostats +nocomments +nocmd
