--- a/.github/workflows/gh-deploy.yml
+++ b/.github/workflows/gh-deploy.yml
@@ -16,3 +16,4 @@ jobs:
       - run: pip install mkdocs-minify-plugin
       - run: mkdocs gh-deploy --force
       - run: dig wiki.meragon.xyz +nostats +nocomments +nocmd
+      - run: echo 'wiki.meragon.xyz' > ./build/CNAME && gh-pages -d build"
